@@ -1,6 +1,7 @@
 2015-12-06  Even Rouault <even.rouault at spatialys.com>
 
-	* libtiff/tif_close.c: rename variable to avoid -Wshadow warning
+	* libtiff/tif_close.c, libtiff/tif_extension.c : rename link
+	variable to avoid -Wshadow warnings
 
 2015-11-22  Even Rouault <even.rouault at spatialys.com>
 
